// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultBanner component Should render correct banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "correctBannerBackground": "#b8f28b",
        "darkBlue": "#1cb0f6",
        "darkGray": "#e5e5e5",
        "darkGreen": "#78c800",
        "incorrectBannerBackground": "#ffc1c1",
        "lightBlue": "#ddf4ff",
        "lightGray": "#f7f7f7",
        "lightGreen": "#b8f28b",
        "mediumGreen": "#84dc00",
        "slate": "#323c41",
        "undecidedBannerBackground": "#f5f5f5",
        "white": "#ffffff",
      },
    }
  }
>
  <styled.div
    answerStatus="correct"
  >
    <styled.div>
      <Icon
        name="tick"
      />
    </styled.div>
    <styled.div>
      <styled.h2>
        You are correct!
      </styled.h2>
      <styled.span>
        Well done keep going!
      </styled.span>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`ResultBanner component Should render incorrect banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "correctBannerBackground": "#b8f28b",
        "darkBlue": "#1cb0f6",
        "darkGray": "#e5e5e5",
        "darkGreen": "#78c800",
        "incorrectBannerBackground": "#ffc1c1",
        "lightBlue": "#ddf4ff",
        "lightGray": "#f7f7f7",
        "lightGreen": "#b8f28b",
        "mediumGreen": "#84dc00",
        "slate": "#323c41",
        "undecidedBannerBackground": "#f5f5f5",
        "white": "#ffffff",
      },
    }
  }
>
  <styled.div
    answerStatus="incorrect"
  >
    <styled.div>
      <Icon
        name="cross"
      />
    </styled.div>
    <styled.div>
      <styled.h2>
        Correct Solution:
      </styled.h2>
      <styled.span>
        En el tren.
      </styled.span>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`ResultBanner component Should render undecided banner type 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "correctBannerBackground": "#b8f28b",
        "darkBlue": "#1cb0f6",
        "darkGray": "#e5e5e5",
        "darkGreen": "#78c800",
        "incorrectBannerBackground": "#ffc1c1",
        "lightBlue": "#ddf4ff",
        "lightGray": "#f7f7f7",
        "lightGreen": "#b8f28b",
        "mediumGreen": "#84dc00",
        "slate": "#323c41",
        "undecidedBannerBackground": "#f5f5f5",
        "white": "#ffffff",
      },
    }
  }
>
  <styled.div
    answerStatus="undecided"
  >
    <styled.button>
      Check Result
    </styled.button>
  </styled.div>
</ThemeProvider>
`;
